# blobber

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  components.rs  controller.rs  lib.rs  main.rs  map.rs  movement.rs  systems.rs
src/components/: animation.rs  camera.rs  health.rs  intent.rs  name.rs  orientation.rs  position.rs
src/events/: event.rs
src/systems/: animate.rs  camera.rs  cleanup.rs  collider.rs  input.rs  mover.rs
